Version ClaSS-0.8.18 release (2007/05/28)
-----------------------------------------

Consistently renamed the set_ vars scripts.



Version ClaSS-0.8.17 release (2007/05/11)
-----------------------------------------

The ugly redirect.php script has finally been updated to call
script/set_action_post_vars.php and include only those vars for
posting which are listed by the parent page in the array
$action_post_vars.

Bug-fix to column_copy.php in the MarkBook when copying grades.

Renamed new_mark2 and new_mark_action to be consistent with other
action scripts; now new_mark_action1 and new_mark_action2
respectively.

Removed the dead and unused scripts column_hide.php and column_show.php.

Expanded the xmlarray capabilities to allow for a default_value, this
is set by xmlarray_form() when the field value is empty.

Have working first versions of the admin pages for enrolments and
accomodation. These use coutin_community to show a spreadsheet of the
student numbers subscribed.


Version ClaSS-0.8.16 release (2007/05/07)
-----------------------------------------

Use patch-0.8.16.sql to bring the db into line with the changes!

The student firstlanguage field has been brought in to line with CBDS
2007, renamed language and allows a char4 code. This is accompanied by
the addition of the languagetype field. Maintains compatibility by
maintaing the old firstlanguage codes in the language list but these
should be deprecated.

All nationality and country fields (in tables guardian, student, and
address) are moved to char2 and now use the iso codes.

Added new field companyname to the guardian table and exposed both
this and the profession fields through the Contact array.

The transportmode field has been included as part of the Student
array. While the transportroute field has been dropped from the info
table and will be superceded by membership of the communities for
school buses.

Attempted to solve a problem with the selct fields in the bookoptions;