@@ -11,6 +11,7 @@ include('scripts/sub_action.php');
 $extrabuttons['usagestatistics']=array('name'=>'current','value'=>'usage_statistics.php');
 two_buttonmenu($extrabuttons);
 ?>
+
   <div id="viewcontent" class="content">
 	<table class="listmenu">
 	  <tr>
@@ -22,24 +23,25 @@ two_buttonmenu($extrabuttons);
 <?php
 $tot=0;
 $tot_on=0;
+
 $d_user=mysql_query("SELECT uid, username, logcount,
-		UNIX_TIMESTAMP(logtime) AS logtime FROM users ORDER BY logtime DESC");
+                UNIX_TIMESTAMP(logtime) AS logtime FROM users ORDER BY logtime DESC");
 while($user=mysql_fetch_array($d_user,MYSQL_ASSOC)){
-	if($user{'logcount'}>0){
+	if($user['logcount']>0){
   	   $userid=$user['uid'];
 	   $d_history=mysql_query("SELECT UNIX_TIMESTAMP(MAX(time))
 				FROM history WHERE uid='$userid'");
 	   $lasttime=mysql_result($d_history,0);
-	   print "<tr><td>".$user{'username'}."</td><td>".$user{'logcount'}."</td>";
+	   print "<tr><td>".$user['username']."</td><td>".$user['logcount']."</td>";
 	   $userdate=date('Y-m-j',$user['logtime']);
 	   $usertime=date('H:i:s',$user['logtime']);
 	   print "<td>$userdate, $usertime</td>";
 	   if(time() - $lasttime < mktime(0,15,0,0,0,1) - mktime(0,0,0,0,0,1)){
-		   print '<td style="background-color:#ff6600;" >';
+		   print '<td>';
 		   print_string('online',$book);
 		   print '</td>';
 		   $tot_on++;
-			} 
+		   }
 	   else{
 	   print '<td>';
 	   print_string('offline',$book);
