@@ -115,6 +115,22 @@ $string['emailpassword']='Webmail password';
 $string['enrolments']='Enrolments';
 $string['changeyear']='Next year';
 $string['classnumbers']='Class sizes';
+$string['assessmentscores']='Assessment scores';
+$string['numberofscoresrecorded']='Number of scores recorded';
+$string['averageperstudent']='Average per student';
+$string['numberofwrittensubjectreports']='Number of written subject reports';
+$string['reportstoparents']='Reports to parents';
+$string['userlogins']='User logins';
+$string['numberofactiveusers']='Number of active users';
+$string['numberoflogins']='Number of logins';
+$string['averageperuser']='Average per user';
+$string['pagesaccessed']='Pages accessed';
+$string['totalnumberofpagesserved']='Total number of pages served';
+$string['uniquepagesserved']='Unique pages served';
+$string['toptwentypages']='Top twenty pages';
+$string['numberofrequests']='Number of requests';
+$string['numberofusers']='Number of users';
+$string['usagestatistics']='Usage statistics';
 $string['']='';
 $string['']='';
 $string['']='';
