@@ -1,8 +1,13 @@
 Version ClaSS-0.8.18 release (2007/05/28)
 -----------------------------------------
 
-Consistently renamed the set_ vars scripts.
+Consistently renamed the set_XXX vars scripts.
 
+New function to list_course_stages.
+
+In the Admin book, renamed the logcounter page and added a new option
+to call from it which gives overall statistics for the current
+academic year.
 
 
 Version ClaSS-0.8.17 release (2007/05/11)
